added-login-formsmodule-to-app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <router-outlet>
   <div class="link-container">
+    <a routerLink="/login">Iniciar sesión</a>
     <a routerLink="/Welcome">Bienvenida</a>
     <a routerLink="/Menu">Menu</a>
   </div> 
